refactor: Upgrade to Spring Boot 3.2